--- a/code-graph-frontend/styles/globals.css
+++ b/code-graph-frontend/styles/globals.css
@@ -2,13 +2,72 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Add hover effect to table rows */
+table tr:hover {
+  background-color: #f7fafc; /* Change to your desired hover color */
+}
+
+/* Add hover effect to table cells */
+table tr:hover td {
+  background-color: transparent; /* Change to your desired cell hover color */
+}
+
+/* Style the button with Tailwind CSS classes */
 .button {
-  background-color: red;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  @apply bg-red-500 text-white py-4 px-8 text-center text-base font-semibold inline-block;
+}
+
+html {
+  font-family: sans-serif;
+  font-size: 14px;
+}
+
+table {
+  border: 1px solid lightgray;
+}
+
+tbody {
+  border-bottom: 1px solid lightgray;
+}
+
+th {
+  border-bottom: 1px solid lightgray;
+  border-right: 1px solid lightgray;
+  padding: 2px 4px;
+  text-align: left;
+}
+
+tfoot {
+  color: gray;
+}
+
+tfoot th {
+  font-weight: normal;
+}
+
+.resizer {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 5px;
+  background: rgba(0, 0, 0, 0.5);
+  cursor: col-resize;
+  user-select: none;
+  touch-action: none;
+}
+
+.resizer.isResizing {
+  background: blue;
+  opacity: 1;
+}
+
+@media (hover: hover) {
+  .resizer {
+    opacity: 0;
+  }
+
+  *:hover > .resizer {
+    opacity: 1;
+  }
 }
