style(stats): make smaller

--- a/code-graph-frontend/styles/globals.css
+++ b/code-graph-frontend/styles/globals.css
@@ -76,9 +76,7 @@ tfoot th {
   background-color: #dcdcdc;
 }
 
-.bubble-chart-container {
+.chart-container {
   overflow: auto;
-  max-height: 400px; /* Adjust the maximum height as needed */
-  border: 1px solid #ccc; /* Optional: Add a border for better visualization */
-  margin-bottom: 20px; /* Optional: Add some spacing between charts */
+  border: 10px solid #433d3d;
 }
