--- a/code-graph-frontend/styles/globals.css
+++ b/code-graph-frontend/styles/globals.css
@@ -80,3 +80,24 @@ tfoot th {
   overflow: auto;
   border: 10px solid #433d3d;
 }
+.tooltip {
+  position: absolute;
+  background-color: white;
+  border: 1px solid black;
+  padding: 5px;
+  display: none;
+}
+.dynamicSvgContainer {
+  position: relative;
+  width : 100%;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
+#canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
