--- a/code-graph-frontend/styles/globals.css
+++ b/code-graph-frontend/styles/globals.css
@@ -91,7 +91,7 @@ tfoot th {
   position: relative;
   width : 100%;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 80%;
   overflow: hidden;
 
 }
@@ -118,3 +118,16 @@ tfoot th {
     width: 250px; /* Adjust this value to your needs */
     background-color: white;
 }
+
+  .container-list {
+    display: flex;
+    flex-direction: column;
+    max-height: 80%;
+    height: 80%;
+  }
+
+  .scroll-list-list {
+    flex: 1;
+    overflow-y: auto;
+    max-height: calc(100vh - 60px);
+  }
